# javaInterruptHook

./: .travis.yml  CMakeLists.txt  README.md  java.sh.in
classes/: Harness.java  NativeTask.java
classes/com/stackoverflow/interrupt/: NativeTaskSelector.java
java/: Harness.java  NativeTask.java  NativeTaskSelector.java
native/: javaFns.cxx
